# AKM

./: .gitignore  .updated_authors  PROJECT_STRUCTURE.md  README.md  config.example.json  demo_data.py  pyproject.toml  requirements.txt  run.py  start.sh
akm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: sdk.py
src/cli/: base.py  completion.py  core.py  main.py  matcher.py  output.py
src/core/: activity.py  author_manager.py  cjk_converter.py  config.py  converter.py  database.py  docx_converter.py  download.py  epub_builder.py  filetype.py  hashing.py  image_converter.py  importer.py  logging.py  manifest.py  migrate_to_db.py  paths.py  pdf_converter.py  queries.py  registry.py  reindex.py  resolvers.py  series_manager.py  utils.py  work_index.py  work_manager.py  work_repository.py  work_search.py  work_source.py  work_stats.py
src/domain/: cdbook.py
src/downloader/: __init__.py  base.py  context.py  runner.py
src/export/: __init__.py  collector.py  formatter.py  merger.py  models.py
src/operations/: __init__.py  clean_op.py  delete_op.py  edit_op.py  export_op.py  import_op.py  info_op.py  list_op.py  recommend_op.py  search_op.py  source_op.py  stats_op.py  verify_op.py
src/web/: __init__.py  app.py  cover.py  (+1 more)
templates/: authors.html  base.html  dashboard.html  download.html  work_detail.html  works.html
tests/: conftest.py  demo_comic_music.py  demo_data.py  demo_movie_image.py  seed_test_files.py  test_cdbook.py  test_chain.py  test_commands.sh  test_operations.py  test_pure_database.py  test_queries.py  test_source_op.py
(+60 files in other folders)
