[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "akm"
version = "0.1.0"
description = "作品管理系统 CLI"
requires-python = ">=3.11"

[project.scripts]
akm = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/cli/downplugin/pixiv/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
