[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "akm"
version = "0.1.0"
description = "作品管理系统 CLI"
requires-python = ">=3.11"

[project.scripts]
akm = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/downloader/pixiv/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "业务层不依赖 CLI 表现层"
type = "forbidden"
source_modules = ["src.operations", "src.downloader"]
forbidden_modules = ["src.cli"]

[[tool.importlinter.contracts]]
name = "Web 表现层不依赖 CLI 表现层"
type = "forbidden"
source_modules = ["src.web"]
forbidden_modules = ["src.cli"]
